--- a/restaurant_review/templates/restaurant_review/index.html
+++ b/restaurant_review/templates/restaurant_review/index.html
@@ -48,7 +48,7 @@
       <table class="table">
           <thead>
               <tr>
-                  <th>Name</th>
+                  <th>Restaurant Name</th>
                   <th>Rating</th>
                   <th class="text-end">Details</th>
               </tr>
